--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Aarti do you want eat chocolates with me?</h1>
+        <h1 class="header_text">Aarti do you want to eat chocolates with me?</h1>
       </div>
       <p>
       </p>
